--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,15 @@
         android:id="@+id/seekBarPricing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2" />
+        android:layout_weight="1" />
+
+    <TextView
+        android:id="@+id/textSeekBarPricing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="$"
+        android:gravity="top|center" />
 
     <RelativeLayout
         android:layout_width="match_parent"
