Added new activity which will be used to display the random restaurant selected.
Added code to pass data over from MainActivity to ChooseCuisineActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textSeekBarPricingTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -84,6 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:onClick="onStartChooseCuisineActivity"
             android:text="Choose" />
     </RelativeLayout>
 
